# LambdaHS

./: LambdaHS.cabal  README.md
src/: Interpreter.hs  Lexer.hs  Main.hs  Parser.hs  Types.hs
